--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.saidul.dogbreed_changers"
+        applicationId "com.saidul.dogbreed"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
@@ -64,8 +64,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
 
-
-
     //Paging
     implementation "androidx.paging:paging-runtime:3.0.0-alpha09"
 
@@ -76,13 +74,12 @@ dependencies {
     implementation "org.koin:koin-androidx-scope:2.1.5"
     implementation 'com.localebro:okhttpprofiler:1.0.8'
 
-
+    // dialogs
     implementation 'com.afollestad.material-dialogs:core:3.3.0'
 
+    // image loading
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-
-
 
 
 }
