--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,13 @@
 
         <activity
             android:name="com.saidul.dogbreed.ui.homePage.DogMainActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.DogBreedChangers.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
     </application>
 
